# schema/openapi.yaml
@@ -1581,7 +1581,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/ExperimentCodeStatusResponseBody'
+                $ref: '#/components/schemas/VerificationCodeStatusResponseBody'
         '422':
           description: Validation Error
           content:
@@ -2742,21 +2742,6 @@ components:
             'config/run/run1.yaml')
       type: object
       title: ExperimentCode
-    ExperimentCodeStatusResponseBody:
-      properties:
-        status:
-          type: string
-          title: Status
-        conclusion:
-          anyOf:
-          - type: string
-          - type: 'null'
-          title: Conclusion
-      type: object
-      required:
-      - status
-      - conclusion
-      title: ExperimentCodeStatusResponseBody
     ExperimentCycle-Input:
       properties:
         experimental_design:
@@ -5655,6 +5640,21 @@ components:
       - msg
       - type
       title: ValidationError
+    VerificationCodeStatusResponseBody:
+      properties:
+        status:
+          type: string
+          title: Status
+        conclusion:
+          anyOf:
+          - type: string
+          - type: 'null'
+          title: Conclusion
+      type: object
+      required:
+      - status
+      - conclusion
+      title: VerificationCodeStatusResponseBody
     VerificationSessionCreateRequest:
       properties:
         title:
